changed referencing for home page button

--- a/site/leaders.html
+++ b/site/leaders.html
@@ -28,6 +28,6 @@
     </section>
 </body>
 <footer>
-    <a href="home_page.html" title="Home">Return to home page</a>
+    <a href="index.html" title="Home">Return to home page</a>
 </footer>
 </html>
